--- a/Answer/Answer.csproj
+++ b/Answer/Answer.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>8</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <StartupObject>AtCoder.Answer.HandMadeMain</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
