--- a/Answer/Answer.csproj
+++ b/Answer/Answer.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <LangVersion>8</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <StartupObject>AtCoder.Answer.HandMadeMain</StartupObject>
+    <StartupObject>Suzuryg.Competitive.Answer.HandMadeMain</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
