--- a/Answer/Answer.csproj
+++ b/Answer/Answer.csproj
@@ -12,6 +12,10 @@
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="ac-library-csharp" Version="1.6.5" />
     <PackageReference Include="AtCoderAnalyzer" Version="1.6.5">
